--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.2",
     "@gorhom/bottom-sheet": "^4",
+    "@react-navigation/native": "^6.0.11",
+    "@react-navigation/native-stack": "^6.7.0",
     "expo": "~45.0.0",
     "expo-app-loading": "~2.0.0",
     "expo-font": "~10.1.0",
