--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,7 +27,8 @@
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "victory-native": "^36.5.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
