--- a/mobile/package.json
+++ b/mobile/package.json
@@ -28,7 +28,8 @@
     "react-native-reanimated": "~2.8.0",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
-    "victory-native": "^36.5.3"
+    "victory-native": "^36.5.3",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
