--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.1.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "express-rescue": "^1.1.31"
   },
   "devDependencies": {
     "eslint": "^8.20.0",
