--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.1.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-rescue": "^1.1.31"
   },
